trunk/Archive2/ac/b5068b5a588deb/output
main.cpp:11:11: error: '::main' must return 'int'
 auto main() {
           ^
